Add function to play game using model

--- a/jericho_walkthrough.ipynb
+++ b/jericho_walkthrough.ipynb
@@ -630,7 +630,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
+   "id": "a9d77698-9a11-4954-9703-39c197133ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('lora_model/tokenizer_config.json',\n",
+       " 'lora_model/special_tokens_map.json',\n",
+       " 'lora_model/chat_template.jinja',\n",
+       " 'lora_model/tokenizer.json')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.save_pretrained(\"lora_model\")\n",
+    "tokenizer.save_pretrained(\"lora_model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "dc7a3a61-365e-4daa-b345-52b005ab4c1c",
    "metadata": {},
    "outputs": [
@@ -638,7 +663,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get egg<|eot_id|>\n"
+      "take egg<|eot_id|>\n"
      ]
     }
    ],
@@ -647,14 +672,17 @@
     "\n",
     "FastLanguageModel.for_inference(model)\n",
     "\n",
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"You are in a room. You see an egg on a table and a chest of drawers.\"},\n",
-    "]\n",
-    "input_ids = tokenizer.apply_chat_template(\n",
-    "    messages,\n",
-    "    add_generation_prompt = True,\n",
-    "    return_tensors = \"pt\",\n",
-    ").to(\"cuda\")\n",
+    "def get_input_ids(in_text):\n",
+    "    messages = [\n",
+    "        {\"role\": \"user\", \"content\": in_text},\n",
+    "    ]\n",
+    "    return tokenizer.apply_chat_template(\n",
+    "        messages,\n",
+    "        add_generation_prompt = True,\n",
+    "        return_tensors = \"pt\",\n",
+    "    ).to(\"cuda\")\n",
+    "\n",
+    "input_ids = get_input_ids(\"You are in a room. You see an egg on a table and a chest of drawers.\")\n",
     "\n",
     "text_streamer = TextStreamer(tokenizer, skip_prompt = True)\n",
     "_ = model.generate(input_ids,\n",
@@ -667,44 +695,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
+   "id": "08a3a99e-a452-4a84-9d4c-7a3a2d23674d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'take sword'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def generate_response(in_text):\n",
+    "    input_ids = get_input_ids(in_text)\n",
+    "    \n",
+    "    output_ids = model.generate(input_ids,\n",
+    "        max_new_tokens = 128,\n",
+    "    )\n",
+    "    out = tokenizer.batch_decode(output_ids)\n",
+    "    \n",
+    "    out_line = out[0]\n",
+    "    start_token = \"<|end_header_id|>\"\n",
+    "    end_token = tokenizer.eos_token\n",
+    "    \n",
+    "    start_index = out_line.rindex(start_token) + len(start_token)\n",
+    "    end_index = out_line.rindex(end_token)\n",
+    "    \n",
+    "    return out_line[start_index : end_index].strip()\n",
+    "\n",
+    "generate_response(\"You are in a cave. In front of you lies a sword sticking out of a large boulder.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "f9995e8d-a13b-4db7-9ae7-2232f47019d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "128004"
+       "(128004, 128009)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer.pad_token_id"
+    "tokenizer.pad_token_id, tokenizer.eos_token_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c6b7e57a-70f3-4c0d-babf-9b28b4ba6eac",
-   "metadata": {},
+   "execution_count": 99,
+   "id": "0e8c0c00-e76a-405a-ad59-5c67c9a5bd6f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "128009"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copyright (c) 1981, 1982, 1983 Infocom, Inc. All rights reserved.\n",
+      "ZORK is a registered trademark of Infocom, Inc.\n",
+      "Revision 88 / Serial number 840726\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "\n",
+      "> READ MAILBOX\n",
+      "How does one read a small mailbox?\n",
+      "\n",
+      "\n",
+      "> W\n",
+      "Forest\n",
+      "This is a forest, with trees in all directions. To the east, there appears to be sunlight.\n",
+      "\n",
+      "\n",
+      "> E\n",
+      "Forest Path\n",
+      "This is a path winding through a dimly lit forest. The path heads north-south here. One particularly large tree with some low branches stands at the edge of the path.\n",
+      "\n",
+      "\n",
+      "> W\n",
+      "Forest\n",
+      "\n",
+      "\n",
+      "> s\n",
+      "Forest\n",
+      "This is a dimly lit forest, with large trees all around.\n",
+      "\n",
+      "\n",
+      "> W\n",
+      "Forest\n",
+      "\n",
+      "\n",
+      "> e\n",
+      "Forest Path\n",
+      "\n",
+      "\n",
+      "> sw\n",
+      "You can't go that way.\n",
+      "\n",
+      "\n",
+      "> take key\n",
+      "You can't see any key here!\n",
+      "You hear in the distance the chirping of a song bird.\n",
+      "\n",
+      "\n",
+      "> E\n",
+      "Forest\n",
+      "This is a dimly lit forest, with large trees all around.\n",
+      "You hear in the distance the chirping of a song bird.\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "tokenizer.eos_token_id"
+    "def run_game(game_filename, n_steps):\n",
+    "    env = jericho.FrotzEnv(game_filename)\n",
+    "    \n",
+    "    obs, info = env.reset()\n",
+    "    print(obs)\n",
+    "    \n",
+    "    for i in range(n_steps):\n",
+    "        response = generate_response(obs)\n",
+    "        print(\">\", response)\n",
+    "        obs, reward, done, info = env.step(response)\n",
+    "        print(obs)\n",
+    "        if done:\n",
+    "            break\n",
+    "    \n",
+    "    env.close()\n",
+    "\n",
+    "run_game(\"./z-machine-games-master/jericho-game-suite/zork1.z5\", 10)"
    ]
   }
  ],
