Potential RAG progress

--- a/test_prompt_completion.ipynb
+++ b/test_prompt_completion.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "016e267a",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "West\n"
+      "West the long-abandoned door creaked open with a dreadful screech, as if warning all who passed to turn and flee. A faint glow emanated from within, casting eerie shadows on the walls. The air was heavy with the scent of decay and forgotten memories. What lies beyond?\n"
      ]
     }
    ],
