--- a/test.ipynb
+++ b/test.ipynb
@@ -857,7 +857,9 @@
    "id": "9b347de4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env.ge"
+   ]
   }
  ],
  "metadata": {
@@ -876,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
