--- a/test_llms.ipynb
+++ b/test_llms.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f7845bd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/s/chopin/b/grad/tmoleary/cs542/cs542-adventure/env/bin:/s/chopin/b/grad/tmoleary/.vscode-server/cli/servers/Stable-1e3c50d64110be466c0b4a45222e81d2c9352888/server/bin/remote-cli:/usr/local/nodejs/18.17.1/bin:/usr/local/postman/latest:/usr/local/maven/3.9.4/bin:/usr/lib/jvm/java-11-openjdk/bin:/usr/share/Modules/bin:/s/chopin/b/grad/tmoleary/.nvm/versions/node/v20.5.0/bin:/usr/lib64/openmpi/bin:/usr/local/cuda/latest/bin:/s/chopin/b/grad/tmoleary/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import sys\n",
     "import time\n",
     "\n",
@@ -14,7 +23,9 @@
     "import jericho\n",
     "import re\n",
     "import json\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "os.environ['PATH'] = f'{os.environ[\"PATH\"]}:./ollama/bin' # Add local ollama"
    ]
   },
   {
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8a58e75d",
    "metadata": {},
    "outputs": [],
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fde5a48e",
    "metadata": {},
    "outputs": [],
@@ -2611,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0d0ae0da",
    "metadata": {},
    "outputs": [],
@@ -2626,36 +2637,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "02d46fdb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/jericho/jericho.py:484: TruncatedInputActionWarning: Once converted to bytes, actions should have less than 198 characters. Action 'I'm a bit confused, but I think it's because we're not talking about any games like Dungeons and Dragons. Instead, I see you've given me some text to read and respond to. My thought process is to recognize the commands that are familiar to me from old-school text adventures, such as \"go north\", \"look around\", or \"take\". Since I don't have a vocabulary of commands, I'll try to come up with something simple like \"look\".' was truncated to 'I'm a bit confused, but I think it's because we're not talking about any games like Dungeons and Dragons. Instead, I see you've given me some text to read and respond to. My thought process is to re'.\n",
-      "  warnings.warn(msg, TruncatedInputActionWarning)\n",
-      "/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/jericho/jericho.py:484: TruncatedInputActionWarning: Once converted to bytes, actions should have less than 198 characters. Action 'As you ponder your next move, you receive a response from the house: \"You are still standing in an open field west of the white house, with a boarded front door.\" You realize that this message is not a command, but rather a statement about your current location.' was truncated to 'As you ponder your next move, you receive a response from the house: \"You are still standing in an open field west of the white house, with a boarded front door.\" You realize that this message is no'.\n",
-      "  warnings.warn(msg, TruncatedInputActionWarning)\n",
-      "/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/jericho/jericho.py:484: TruncatedInputActionWarning: Once converted to bytes, actions should have less than 198 characters. Action 'As you ponder the message and the location, your thought process is still on exploring the area and gathering more information before responding to either the message from the old oak or the one sent back to the house.' was truncated to 'As you ponder the message and the location, your thought process is still on exploring the area and gathering more information before responding to either the message from the old oak or the one sen'.\n",
-      "  warnings.warn(msg, TruncatedInputActionWarning)\n",
-      "/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/jericho/jericho.py:484: TruncatedInputActionWarning: Once converted to bytes, actions should have less than 198 characters. Action 'You are standing in an open field west of a white house, with a boarded front door. The note from earlier seems to be more cryptic now, but it's clear that there's something important being communicated.' was truncated to 'You are standing in an open field west of a white house, with a boarded front door. The note from earlier seems to be more cryptic now, but it's clear that there's something important being communic'.\n",
-      "  warnings.warn(msg, TruncatedInputActionWarning)\n",
-      "ERROR:tornado.general:Uncaught exception in ZMQStream callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/zmq/eventloop/zmqstream.py\", line 565, in _log_error\n",
-      "    f.result()\n",
-      "    ~~~~~~~~^^\n",
-      "  File \"/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/ipykernel/utils.py\", line 60, in run_in_context\n",
-      "    return await asyncio.create_task(coro, context=context)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/ipykernel/kernelbase.py\", line 614, in shell_main\n",
-      "    await self.dispatch_shell(msg, subshell_id=subshell_id)\n",
-      "  File \"/home/tmoleary/school/cs542-adventure/env/lib/python3.13/site-packages/ipykernel/kernelbase.py\", line 484, in dispatch_shell\n",
-      "    sys.stdout.flush()\n",
-      "    ~~~~~~~~~~~~~~~~^^\n",
-      "ValueError: I/O operation on closed file.\n"
+      "Playing game. 'q' to quit\n",
+      "Copyright (c) 1981, 1982, 1983 Infocom, Inc. All rights reserved.\n",
+      "ZORK is a registered trademark of Infocom, Inc.\n",
+      "Revision 88 / Serial number 840726\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ConnectionError",
+     "evalue": "Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mConnectionError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m full_results = []\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name, func \u001b[38;5;129;01min\u001b[39;00m calls.items():\n\u001b[32m     13\u001b[39m     \u001b[38;5;66;03m# with open(os.path.join(output_dir, f'{name}_output.txt'), 'w') as f:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     results = \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m     full_results.append({\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m: name, **results})\n\u001b[32m     17\u001b[39m df = pd.DataFrame(full_results)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mbasic_llm\u001b[39m\u001b[34m(max_retry, out_file)\u001b[39m\n\u001b[32m     31\u001b[39m prompt = make_prompt(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mGame prompt:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mgame_response\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     32\u001b[39m start = time.time()\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m response = \u001b[43mollama\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mllama3.2:1b\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m.response\n\u001b[32m     34\u001b[39m generate_times.append(time.time() - start)\n\u001b[32m     35\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m[r\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mretries\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] LLM Response: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/cs542/cs542-adventure/env/lib/python3.13/site-packages/ollama/_client.py:262\u001b[39m, in \u001b[36mClient.generate\u001b[39m\u001b[34m(self, model, prompt, suffix, system, template, context, stream, think, logprobs, top_logprobs, raw, format, images, options, keep_alive)\u001b[39m\n\u001b[32m    233\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgenerate\u001b[39m(\n\u001b[32m    234\u001b[39m   \u001b[38;5;28mself\u001b[39m,\n\u001b[32m    235\u001b[39m   model: \u001b[38;5;28mstr\u001b[39m = \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    250\u001b[39m   keep_alive: Optional[Union[\u001b[38;5;28mfloat\u001b[39m, \u001b[38;5;28mstr\u001b[39m]] = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    251\u001b[39m ) -> Union[GenerateResponse, Iterator[GenerateResponse]]:\n\u001b[32m    252\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    253\u001b[39m \u001b[33;03m  Create a response using the requested model.\u001b[39;00m\n\u001b[32m    254\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    259\u001b[39m \u001b[33;03m  Returns `GenerateResponse` if `stream` is `False`, otherwise returns a `GenerateResponse` generator.\u001b[39;00m\n\u001b[32m    260\u001b[39m \u001b[33;03m  \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m262\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    263\u001b[39m \u001b[43m    \u001b[49m\u001b[43mGenerateResponse\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    264\u001b[39m \u001b[43m    \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPOST\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    265\u001b[39m \u001b[43m    \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m/api/generate\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    266\u001b[39m \u001b[43m    \u001b[49m\u001b[43mjson\u001b[49m\u001b[43m=\u001b[49m\u001b[43mGenerateRequest\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    267\u001b[39m \u001b[43m      \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    268\u001b[39m \u001b[43m      \u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    269\u001b[39m \u001b[43m      \u001b[49m\u001b[43msuffix\u001b[49m\u001b[43m=\u001b[49m\u001b[43msuffix\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    270\u001b[39m \u001b[43m      \u001b[49m\u001b[43msystem\u001b[49m\u001b[43m=\u001b[49m\u001b[43msystem\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    271\u001b[39m \u001b[43m      \u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    272\u001b[39m \u001b[43m      \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    273\u001b[39m \u001b[43m      \u001b[49m\u001b[43mstream\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    274\u001b[39m \u001b[43m      \u001b[49m\u001b[43mthink\u001b[49m\u001b[43m=\u001b[49m\u001b[43mthink\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    275\u001b[39m \u001b[43m      \u001b[49m\u001b[43mlogprobs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlogprobs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    276\u001b[39m \u001b[43m      \u001b[49m\u001b[43mtop_logprobs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtop_logprobs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    277\u001b[39m \u001b[43m      \u001b[49m\u001b[43mraw\u001b[49m\u001b[43m=\u001b[49m\u001b[43mraw\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    278\u001b[39m \u001b[43m      \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    279\u001b[39m \u001b[43m      \u001b[49m\u001b[43mimages\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m_copy_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mimages\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    280\u001b[39m \u001b[43m      \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m=\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    281\u001b[39m \u001b[43m      \u001b[49m\u001b[43mkeep_alive\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeep_alive\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    282\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel_dump\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexclude_none\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    283\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstream\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    284\u001b[39m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/cs542/cs542-adventure/env/lib/python3.13/site-packages/ollama/_client.py:189\u001b[39m, in \u001b[36mClient._request\u001b[39m\u001b[34m(self, cls, stream, *args, **kwargs)\u001b[39m\n\u001b[32m    185\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(**part)\n\u001b[32m    187\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m inner()\n\u001b[32m--> \u001b[39m\u001b[32m189\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(**\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_request_raw\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m.json())\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/cs542/cs542-adventure/env/lib/python3.13/site-packages/ollama/_client.py:135\u001b[39m, in \u001b[36mClient._request_raw\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    133\u001b[39m   \u001b[38;5;28;01mraise\u001b[39;00m ResponseError(e.response.text, e.response.status_code) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    134\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m httpx.ConnectError:\n\u001b[32m--> \u001b[39m\u001b[32m135\u001b[39m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mConnectionError\u001b[39;00m(CONNECTION_ERROR_MESSAGE) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[31mConnectionError\u001b[39m: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download"
      ]
     }
    ],
@@ -2663,18 +2677,18 @@
     "\n",
     "calls = {\n",
     "    'basic_llm': basic_llm,\n",
-    "    'basic_llm_with_memory': basic_llm_with_memory,\n",
-    "    'basic_llm_with_memory_chatgpt': lambda out_file: basic_llm_with_memory(system_prompt=system_prompt_memory_chatgpt, out_file=out_file),\n",
-    "    'memory_analyze_then_command': memory_analyze_then_command,\n",
-    "    'memory_and_provided_commands': memory_and_provided_commands,\n",
-    "    'memory_analyze_provided_commands': memory_analyze_provided_commands,\n",
-    "    'memory_analyze_provided_commands_chat': memory_analyze_provided_commands_chat,\n",
+    "    # 'basic_llm_with_memory': basic_llm_with_memory,\n",
+    "    # 'basic_llm_with_memory_chatgpt': lambda out_file: basic_llm_with_memory(system_prompt=system_prompt_memory_chatgpt, out_file=out_file),\n",
+    "    # 'memory_analyze_then_command': memory_analyze_then_command,\n",
+    "    # 'memory_and_provided_commands': memory_and_provided_commands,\n",
+    "    # 'memory_analyze_provided_commands': memory_analyze_provided_commands,\n",
+    "    # 'memory_analyze_provided_commands_chat': memory_analyze_provided_commands_chat,\n",
     "}\n",
     "\n",
     "full_results = []\n",
     "for name, func in calls.items():\n",
-    "    with open(os.path.join(output_dir, f'{name}_output.txt'), 'w') as f:\n",
-    "        results = func(out_file=f)\n",
+    "    # with open(os.path.join(output_dir, f'{name}_output.txt'), 'w') as f:\n",
+    "    results = func()\n",
     "    full_results.append({'name': name, **results})\n",
     "\n",
     "df = pd.DataFrame(full_results)\n",
@@ -2761,7 +2775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
