Another run of rag

--- a/test_rag.ipynb
+++ b/test_rag.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0c073f92",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "92ff5358",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1043189/3715686930.py:2: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaEmbeddings``.\n",
+      "/tmp/ipykernel_1334993/3715686930.py:2: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaEmbeddings``.\n",
       "  embeddings = OllamaEmbeddings(model=\"nomic-embed-text:latest\")\n"
      ]
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "63139c70",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "329df6d0",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f968671f",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b532c6a5",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "0b88f16e",
    "metadata": {},
    "outputs": [
@@ -162,6 +162,123 @@
       "West of House\n",
       "You are standing in an open field west of a white house, with a boarded front door.\n",
       "There is a small mailbox here.\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[]\n",
+      "PLAYER LOCATION\n",
+      "Obj180: West House Parent82 Sibling15 Child4 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 27, 25, 24, 21, 17, 5]\n",
+      "None\n",
+      "Obj15: Slide  Parent82 Sibling16 Child0 Attributes [6] Properties [31, 30, 22, 11, 5]\n",
+      "Obj4: cretin Parent180 Sibling181 Child0 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent180 Sibling181 Child0 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 1, 'score': 0}\n",
+      "Opening the small mailbox reveals a leaflet.\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj180: West House Parent82 Sibling15 Child4 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 27, 25, 24, 21, 17, 5]\n",
+      "None\n",
+      "Obj15: Slide  Parent82 Sibling16 Child0 Attributes [6] Properties [31, 30, 22, 11, 5]\n",
+      "Obj4: cretin Parent180 Sibling181 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent180 Sibling181 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 2, 'score': 0}\n",
+      "(Taken)\n",
+      "\"WELCOME TO ZORK!\n",
+      "\n",
+      "ZORK is a game of adventure, danger, and low cunning. In it you will explore some of the most amazing territory ever seen by mortals. No computer should be without one!\"\n",
+      "\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj80: South House Parent82 Sibling81 Child4 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 27, 26, 11, 5]\n",
+      "None\n",
+      "Obj81: North House Parent82 Sibling178 Child0 Attributes [6, 9, 20] Properties [31, 30, 29, 28, 25, 24, 11, 5]\n",
+      "Obj4: cretin Parent80 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent80 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 3, 'score': 0}\n",
+      "South of House\n",
+      "You are facing the south side of a white house. There is no door here, and all the windows are boarded.\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj79: Behind House Parent82 Sibling80 Child4 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 26, 24, 21, 17, 5]\n",
+      "None\n",
+      "Obj80: South House Parent82 Sibling81 Child0 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 27, 26, 11, 5]\n",
+      "Obj4: cretin Parent79 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent79 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 4, 'score': 0}\n",
+      "Behind House\n",
+      "You are behind the white house. A path leads into the forest to the east. In one corner of the house there is a small window which is slightly ajar.\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj79: Behind House Parent82 Sibling80 Child4 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 26, 24, 21, 17, 5]\n",
+      "None\n",
+      "Obj80: South House Parent82 Sibling81 Child0 Attributes [3, 6, 9, 20] Properties [31, 30, 29, 28, 27, 26, 11, 5]\n",
+      "Obj4: cretin Parent79 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent79 Sibling0 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 5, 'score': 0}\n",
+      "With great effort, you open the window far enough to allow entry.\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj203: Kitchen Parent82 Sibling74 Child4 Attributes [3, 6, 9, 20] Properties [30, 29, 23, 22, 20, 17, 13, 5]\n",
+      "None\n",
+      "Obj74: Clearing Parent82 Sibling143 Child0 Attributes [6, 9, 20] Properties [31, 30, 29, 28, 23, 17, 11, 5]\n",
+      "Obj4: cretin Parent203 Sibling204 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent203 Sibling204 Child161 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 6, 'score': 10}\n",
+      "Kitchen\n",
+      "You are in the kitchen of the white house. A table seems to have been used recently for the preparation of food. A passage leads to the west and a dark staircase can be seen leading upward. A dark chimney leads down and to the east is a small window which is open.\n",
+      "On the table is an elongated brown sack, smelling of hot peppers.\n",
+      "A bottle is sitting on the table.\n",
+      "The glass bottle contains:\n",
+      "  A quantity of water\n",
+      "\n",
+      "\n",
+      "State info:\n",
+      "INVENTORY\n",
+      "[Obj236: glass bottle Parent4 Sibling224 Child237 Attributes [3, 12, 17, 19] Properties [18, 17, 16, 14, 10], Obj224: brown sack Parent4 Sibling161 Child225 Attributes [3, 17, 19, 26] Properties [18, 17, 16, 15, 14, 10], Obj161: leaflet Parent4 Sibling0 Child0 Attributes [3, 16, 17, 26] Properties [18, 16, 15, 11, 8]]\n",
+      "PLAYER LOCATION\n",
+      "Obj203: Kitchen Parent82 Sibling74 Child4 Attributes [3, 6, 9, 20] Properties [30, 29, 23, 22, 20, 17, 13, 5]\n",
+      "None\n",
+      "Obj74: Clearing Parent82 Sibling143 Child0 Attributes [6, 9, 20] Properties [31, 30, 29, 28, 23, 17, 11, 5]\n",
+      "Obj4: cretin Parent203 Sibling204 Child236 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "PLAYER OBJECT\n",
+      "Obj4: cretin Parent203 Sibling204 Child236 Attributes [7, 9, 12, 14, 30] Properties [18, 17, 7]\n",
+      "\n",
+      "{'moves': 7, 'score': 10}\n",
+      "brown sack: Taken.\n",
+      "glass bottle: Taken.\n",
       "\n",
       "\n"
      ]
