Chain of Thought

--- a/cs542_report.ipynb
+++ b/cs542_report.ipynb
@@ -1771,7 +1771,7 @@
    "outputs": [],
    "source": [
     "from adventure.rag_bot import Game as RagGame\n",
-    "game = Game()\n",
+    "game = RagGame()\n",
     "game.run_game()"
    ]
   },
@@ -1781,19 +1781,34 @@
     "id": "jj7rk1f9p6n0"
    },
    "source": [
-    "## Multi-step Questioning\n",
+    "## Chain of Thought\n",
     "\n",
-    "- Describe your current goal\n",
-    "\t- Inputs: History\n",
-    "- Does this goal align with your overarching goal to complete Zork?\n",
-    "\t- Inputs:\n",
-    "- List key information you learned after your previous action, and important aspects of your surroundings.\n",
-    "\t- Inputs: Room description, history\n",
-    "-> RAG\n",
-    "- Given what you’ve observed about your current game state, what should be done next?\n",
-    "\t- Inputs: Key information, Goal, RAG output\n",
-    "- What is your next action?\n",
-    "\t- Inputs: What should be done next\n"
+    "Even when provided with more information about the state of the game and player, the model still suffers from a lack of direction, still seeming to wander aimlessly if not randomly. To combat this, we try separating turns into multiple steps, similar to the added “analyze” step used with an earlier strategy. This is also a similar approach to Q*BERT, which uses a question-answer dataset. This paradigm of asking the model pointed questions related to its goal, and feeding the answers back to the model for its final inference forms a sort of “Chain of Thought” (https://www.promptingguide.ai/techniques/cot) and is a common strategy for prompt engineering to improve model performance.\n",
+    "\n",
+    "For each step in the game:\n",
+    "- The model describes its overarching goal and one short-term goal\n",
+    "- The model lists key new information, important aspects of its surroundings, and information its tools, all centered around the goal it determined in the previous step\n",
+    "- The goal and listed assets are used to query the vector store to retrieve relevant game information from RAG memory as context\n",
+    "- The goal, assets, and context are provided to the model to generate the final action\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from adventure.multistep_rag_bot import Game as CotGame\n",
+    "game = CotGame()\n",
+    "game.run_game()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This created interesting output where the LLM would generate a thought process and did tend to follow it, but it didn’t always choose goals that were productive even with this. It did seem to promote better exploration of its environment. Likely refinements to what is stored in the vector database would be required to make this better, potentially allowing the model to determine goals outside of its current room."
    ]
   },
   {
@@ -1958,22 +1973,6 @@
     "| --- | --- |\n",
     "| Everett | Off-the-shelf LLM prototype, Q-BERT, LoRA, GRPO, Graph RAG |\n",
     "| Tyson | Off-the-shelf LLMs, GPT-5 experiment, Retrieval Augmented Generation, Multi-Step Questioning, RAG |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Results\n",
-    "\n",
-    "| model | Unique Rooms | Unique Items | Unique Game States | Score | Average Retries | Average Generate Time |\n",
-    "| --- | --- | --- | --- | --- | --- | --- |\n",
-    "||||||||\n",
-    "| Basic LLaMa | 6 | 1 | 13 | 0 | 100+ | 1.85s |\n",
-    "| Memory | 5 | 0 | 8 | 10 | 30 | 1.38s |\n",
-    "| Memory & ChatGPT Prompt | 8 | 1 | 11 | 0 | 100+ | 0.255s |\n",
-    "| Memory & Provided Commands | 8 | 5 | 53 | 10 | 6 | 0.15s |\n",
-    "| Memory, Analyze, Provided Commands | 10 | 7 | 60 | 10 | 15.5 | 1.86s |\n"
    ]
   }
  ],
