More outputs. Ready for data runs

--- a/cs542_report.ipynb
+++ b/cs542_report.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "id": "UnmHHoSMn946"
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "id": "xCz0vmmJ2mPe"
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "id": "ywesEHzW2_DC"
    },
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4155,9 +4155,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAG results: [Document(id='180', metadata={'_depth': 0, '_similarity_score': np.float64(1.0), 'name': 'West of House', 'exits': ['81', '80', '78'], 'exit_directions': ['north', 'south', 'west']}, page_content='West of House\\nYou are standing in an open field west of a white house, with a boarded front door.\\nThere is a small mailbox here.')]\n",
+      "# Knowledge\n",
+      "\n",
+      "## Description for \"West of House\" location:\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Location\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Inventory\n",
+      "\n",
+      "You are empty-handed.\n",
+      "\n",
+      "# Observation\n",
+      "\n",
+      "Previous command: \n",
+      "\n",
+      "Result:\n",
+      "Copyright (c) 1981, 1982, 1983 Infocom, Inc. All rights reserved.\n",
+      "ZORK is a registered trademark of Infocom, Inc.\n",
+      "Revision 88 / Serial number 840726\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "Valid actions: open mailbox, north, south, west\n",
+      "What action do you take next?\n",
+      "> open\n",
+      "{'moves': 3, 'unique_rooms': 1, 'unique_hashes': 2, 'unique_items': 0, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 2.449559450149536}\n",
+      "RAG results: [Document(id='180', metadata={'_depth': 0, '_similarity_score': np.float64(1.0), 'name': 'West of House', 'exits': ['81', '80', '78'], 'exit_directions': ['north', 'south', 'west']}, page_content='West of House\\nYou are standing in an open field west of a white house, with a boarded front door.\\nThere is a small mailbox here.')]\n",
+      "# Knowledge\n",
+      "\n",
+      "## Description for \"West of House\" location:\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Location\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Inventory\n",
+      "\n",
+      "You are empty-handed.\n",
+      "\n",
+      "# Observation\n",
+      "\n",
+      "Previous command: open\n",
+      "\n",
+      "Result:\n",
+      "(door)\n",
+      "The door cannot be opened.\n",
+      "\n",
+      "Valid actions: open mailbox, north, south, west\n",
+      "What action do you take next?\n",
+      "> open mailbox\n",
+      "{'moves': 6, 'unique_rooms': 1, 'unique_hashes': 3, 'unique_items': 0, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 1.3044320344924927}\n",
+      "RAG results: [Document(id='180', metadata={'_depth': 0, '_similarity_score': np.float64(1.0000000000000002), 'name': 'West of House', 'exits': ['81', '80', '78'], 'exit_directions': ['north', 'south', 'west']}, page_content='West of House\\nYou are standing in an open field west of a white house, with a boarded front door.\\nThere is a small mailbox here.\\nThe small mailbox contains:\\n  A leaflet')]\n",
+      "# Knowledge\n",
+      "\n",
+      "## Description for \"West of House\" location:\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "The small mailbox contains:\n",
+      "  A leaflet\n",
+      "\n",
+      "# Location\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "The small mailbox contains:\n",
+      "  A leaflet\n",
+      "\n",
+      "# Inventory\n",
+      "\n",
+      "You are empty-handed.\n",
+      "\n",
+      "# Observation\n",
+      "\n",
+      "Previous command: open mailbox\n",
+      "\n",
+      "Result:\n",
+      "Opening the small mailbox reveals a leaflet.\n",
+      "\n",
+      "Valid actions: take leaflet, close mailbox, north, south, west\n",
+      "What action do you take next?\n",
+      "> take\n",
+      "{'moves': 9, 'unique_rooms': 1, 'unique_hashes': 4, 'unique_items': 1, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 0.923453172047933}\n",
+      "RAG results: [Document(id='180', metadata={'_depth': 0, '_similarity_score': np.float64(1.0), 'name': 'West of House', 'exits': ['81', '80', '78'], 'exit_directions': ['north', 'south', 'west']}, page_content='West of House\\nYou are standing in an open field west of a white house, with a boarded front door.\\nThere is a small mailbox here.')]\n",
+      "# Knowledge\n",
+      "\n",
+      "## Description for \"West of House\" location:\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Location\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Inventory\n",
+      "\n",
+      "You are carrying:\n",
+      "  A leaflet\n",
+      "\n",
+      "# Observation\n",
+      "\n",
+      "Previous command: take\n",
+      "\n",
+      "Result:\n",
+      "(leaflet)\n",
+      "Taken.\n",
+      "\n",
+      "Valid actions: close mailbox, put down leaflet, north, put leaflet in mailbox, south, west\n",
+      "What action do you take next?\n",
+      "> put\n",
+      "{'moves': 11, 'unique_rooms': 1, 'unique_hashes': 4, 'unique_items': 1, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 0.7322847843170166}\n"
+     ]
+    }
+   ],
    "source": [
     "from adventure.rag_bot import Game as RagGame\n",
     "game = RagGame()\n",
@@ -4184,9 +4320,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Last Action Result:\n",
+      "Copyright (c) 1981, 1982, 1983 Infocom, Inc. All rights reserved.\n",
+      "ZORK is a registered trademark of Infocom, Inc.\n",
+      "Revision 88 / Serial number 840726\n",
+      "\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "\n",
+      "\n",
+      "# Knowledge:\n",
+      "## Description for \"West of House\":\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Goal: My overarching goal is to explore the white house located west of my current position.\n",
+      "\n",
+      "My single most pressing short-term goal is to open the front door of the house by removing or breaking the board covering it.\n",
+      "\n",
+      "# Notes:\n",
+      "**Key New Information:** The presence of a small mailbox suggests that there may be some additional items or clues nearby.\n",
+      "\n",
+      "**Important Aspects of Surroundings:**\n",
+      "\n",
+      "* I'm standing in an open field west of a white house with a boarded front door.\n",
+      "* There's a small mailbox next to the board covering the front door.\n",
+      "\n",
+      "**Most Important Tools:**\n",
+      "I have nothing (empty-handed) that can be used to interact with or remove the board covering the front door.\n",
+      "\n",
+      "All possible actions: open mailbox, north, south, west, warp <location>\n",
+      "\n",
+      "Given what you have observed about your current game state, what is your next action to move toward your goal?\n",
+      "> open mailbox\n",
+      "{'moves': 3, 'unique_rooms': 1, 'unique_hashes': 2, 'unique_items': 0, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 2.269000291824341}\n",
+      "# Last Action Result:\n",
+      "Opening the small mailbox reveals a leaflet.\n",
+      "\n",
+      "\n",
+      "\n",
+      "# Knowledge:\n",
+      "## Description for \"West of House\":\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "The small mailbox contains:\n",
+      "  A leaflet\n",
+      "\n",
+      "# Goal: My overarching goal remains to explore the white house located west of my current position.\n",
+      "\n",
+      "My single most pressing short-term goal is to examine the contents of the leaflet found in the mailbox, as it may provide some useful information or clues about how to access or remove the board covering the front door.\n",
+      "\n",
+      "# Notes:\n",
+      "**Key New Information:** The leaflet contains some text that may be relevant to accessing or removing the board covering the front door.\n",
+      "\n",
+      "**Important Aspects of Surroundings:**\n",
+      "\n",
+      "* I'm still standing in an open field west of a white house with a boarded front door and next to it, a small mailbox.\n",
+      "* The contents of the small mailbox (a leaflet) are now accessible for examination.\n",
+      "\n",
+      "**Most Important Tools:**\n",
+      "I have nothing (empty-handed) that can be used to interact with or remove the board covering the front door.\n",
+      "\n",
+      "All possible actions: take leaflet, close mailbox, north, south, west, warp <location>\n",
+      "\n",
+      "Given what you have observed about your current game state, what is your next action to move toward your goal?\n",
+      "> take\n",
+      "{'moves': 6, 'unique_rooms': 1, 'unique_hashes': 3, 'unique_items': 1, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 2.1782479286193848}\n",
+      "# Last Action Result:\n",
+      "(leaflet)\n",
+      "Taken.\n",
+      "\n",
+      "\n",
+      "\n",
+      "# Knowledge:\n",
+      "## Description for \"West of House\":\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Goal: My overarching goal remains to explore the white house located west of my current position.\n",
+      "\n",
+      "My single most pressing short-term goal is now to examine or utilize the leaflet I've taken, as its contents may reveal a way to access or remove the board covering the front door and enter the house.\n",
+      "\n",
+      "# Notes:\n",
+      "**Key New Information:** I now possess a physical leaflet that can be examined or used.\n",
+      "\n",
+      "**Important Aspects of Surroundings:**\n",
+      "\n",
+      "* The situation remains the same: standing in an open field west of a white house with a boarded front door and next to it, a small mailbox.\n",
+      "* No changes have been made to the board covering the front door.\n",
+      "\n",
+      "**Most Important Tools:**\n",
+      "I have the leaflet (physical object) that can be used to interact or access the board covering the front door.\n",
+      "\n",
+      "All possible actions: close mailbox, put down leaflet, north, put leaflet in mailbox, south, west, warp <location>\n",
+      "\n",
+      "Given what you have observed about your current game state, what is your next action to move toward your goal?\n",
+      "> Examine leaflet.\n",
+      "{'moves': 9, 'unique_rooms': 1, 'unique_hashes': 3, 'unique_items': 1, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 2.2157034873962402}\n",
+      "# Last Action Result:\n",
+      "\"WELCOME TO ZORK!\n",
+      "\n",
+      "ZORK is a game of adventure, danger, and low cunning. In it you will explore some of the most amazing territory ever seen by mortals. No computer should be without one!\"\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "# Knowledge:\n",
+      "## Description for \"West of House\":\n",
+      "West of House\n",
+      "You are standing in an open field west of a white house, with a boarded front door.\n",
+      "There is a small mailbox here.\n",
+      "\n",
+      "# Goal: It seems I've reached a humorous introduction screen.\n",
+      "\n",
+      "My overarching goal remains to explore the white house located west of my current position, but given the context, I think it's unlikely I'll be able to access or enter the house through normal means.\n",
+      "\n",
+      "My single most pressing short-term goal is no longer relevant, as the situation has changed dramatically. Instead, I'll focus on exploring this introduction screen and potentially finding a way to progress further in the game.\n",
+      "\n",
+      "# Notes:\n",
+      "**Key New Information:** I've realized that I may not be able to enter the white house through normal means.\n",
+      "\n",
+      "**Important Aspects of Surroundings:**\n",
+      "\n",
+      "* The situation has changed: I'm now standing in an open field west of a white house with a boarded front door, but also viewing a humorous introduction screen.\n",
+      "* No physical way forward is available, as the board covering the front door seems impassable.\n",
+      "\n",
+      "**Most Important Tools:**\n",
+      "I have the leaflet (physical object) that provided the humorous introduction screen.\n",
+      "\n",
+      "All possible actions: close mailbox, put down leaflet, north, put leaflet in mailbox, south, west, warp <location>\n",
+      "\n",
+      "Given what you have observed about your current game state, what is your next action to move toward your goal?\n",
+      "> south\n",
+      "{'moves': 12, 'unique_rooms': 2, 'unique_hashes': 4, 'unique_items': 1, 'score': 0, 'max_score': 350, 'avg_retries': 1.0, 'avg_generate_time': 2.3324639797210693}\n"
+     ]
+    }
+   ],
    "source": [
     "from adventure.multistep_rag_bot import Game as CotGame\n",
     "game = CotGame()\n",
