--- a/test_rag.ipynb
+++ b/test_rag.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "907f72aa",
    "metadata": {},
    "outputs": [],
@@ -327,15 +327,6 @@
     "\n",
     "def n_steps(turn_func, env, n=100):\n",
     "    score_tracker = ScoreTracker(env)\n",
-    "    \n",
-    "    # Begin\n",
-    "    # generate_times = []\n",
-    "    # unique_rooms = set()\n",
-    "    # unique_items = set()\n",
-    "    # unique_hashes = set()\n",
-    "    # retries = 0\n",
-    "    # retries_per_score = []\n",
-    "    # prev_score = 0\n",
     "\n",
     "    for _ in range(n):\n",
     "\n",
@@ -343,33 +334,13 @@
     "        start = time.time()\n",
     "        done, info = turn_func()\n",
     "        end = time.time()\n",
-    "        # generate_times.append(end - start)\n",
     "        \n",
     "        score_tracker.update(info, start, end)\n",
-    "        \n",
-    "        # unique_rooms.add(env.get_player_location().name)\n",
-    "        # unique_items.update([item.name for item in env.get_inventory()])\n",
-    "        # unique_hashes.add(env.get_world_state_hash())\n",
-    "        \n",
-    "        # retries += 1\n",
-    "        # if info['score'] != prev_score: # If score changes, major step has been made so number of retries resets\n",
-    "        #     retries_per_score.append(retries)\n",
-    "        #     retries = 0\n",
-    "        # prev_score = info['score']\n",
     "\n",
     "        if done:\n",
     "            break\n",
     "\n",
-    "    return score_tracker.get_stats(env, info)\n",
-    "    # return {\n",
-    "    #     'unique_rooms': len(unique_rooms),\n",
-    "    #     'unique_items': len(unique_items),\n",
-    "    #     'unique_hashes': len(unique_hashes),\n",
-    "    #     'score': info['score'],\n",
-    "    #     'max_score': env.get_max_score(),\n",
-    "    #     'avg_retries': sum(retries_per_score) / len(retries_per_score) if len(retries_per_score) != 0 else f'{n}+',\n",
-    "    #     'avg_generate_time': sum(generate_times) / len(generate_times)\n",
-    "    # }"
+    "    return score_tracker.get_stats(env, info)"
    ]
   },
   {
